# feast-server-nginx

./: .gitignore  CLAUDE.md  DATA_SUMMARY.md  Dockerfile.feast  README.md  docker-compose.yml  pyproject.toml
client/: feature_store.yaml  feature_store_alice.yaml  feature_store_bob.yaml  feature_store_nginx.yaml  feature_store_plain.yaml  setup_client.sh  test_client.py  test_rbac.py
feature_repo/: feature_definitions.py  feature_store.yaml  generate_data.py  init.sh  start_offline.sh  start_online.sh  start_registry.sh
keycloak/: realm-export.json
nginx/: nginx.conf
scripts/: diagnose.sh  gen_certs.sh
